external/lib25519-20241004/build/arm64/nP/montgomery25519/arm64-maa4-redmul/shared/result-compile-mladder
mladder.S:3870:19: error: unexpected token in '.section' directive
.section .note.GNU-stack,"",@progbits
                  ^
